Bug 529877: make test-osgi tests runnable on jdk 9
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>